src/test/deca/context/invalid/self/doubleDeclaration.deca
class A {
    int a;
    int a;
}